# kupu

./: .dockerignore  .gitignore  Dockerfile  LICENSE  docker-compose.yml  install.sh  readme.md  start-server.sh  start-web.sh
.github/workflows/: build.yml
model-service/: .dockerignore  Dockerfile  inpainter.py  pyproject.toml  server.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web-kupu/: Dockerfile  Gemfile
web-kupu/app/assets/stylesheets/: application.css
web-kupu/app/controllers/: pages_controller.rb
web-kupu/app/javascript/controllers/: canvas_controller.js
web-kupu/app/views/layouts/: _canvas_controls.html.erb  _tutorial_popup.html.erb  application.html.erb
web-kupu/app/views/pages/: canvas.html.erb
web-kupu/app/views/pwa/: manifest.json.erb
web-kupu/config/: application.rb  credentials.yml.enc  deploy.yml  routes.rb
web/src/: App.tsx  main.tsx
web/src/components/: Editor.tsx  IconButton.tsx
web/src/hooks/: ImageProcessor.tsx
worker/: .gitignore  requirements.txt
worker/app/: inpainter.py  main.py  server.py  utils.py
worker/public/: index.html
