[project]
name = "model-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "huggingface-hub>=0.20.0",
    "loguru>=0.7.3",
    "numpy>=2.2.2",
    "pillow>=11.3.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "torch>=2.4.0",
    "uvicorn>=0.24.0",
]
